--- a/style.css
+++ b/style.css
@@ -64,3 +64,16 @@ background-color: lightgreen;
 nav:hover li a  {
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.ul1
+{
+list-style: none;
+}
+button
+{
+  background-color: skyblue;
+}
+button:hover
+{
+  background-color:lightgreen
+}
